--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
-
+  <!--<script src="/__/firebase/7.14.5/firebase-app.js"></script>
+  <script src="/__/firebase/7.14.5/firebase-analytics.js"></script>
+  <script src="/__/firebase/7.14.5/firebase-auth.js"></script>
+  <script src="/__/firebase/7.14.5/firebase-firestore.js"></script>-->
 </head>
 <body>
   <app-root></app-root>
